opam-version: "2.0"
synopsis: "oh-webc"
description: "A library for Melange"
maintainer: ["<your_name>"]
authors: ["<your_name>"]
license: "XXX"
homepage: "https://github.com/your/project"
bug-reports: "https://github.com/your/project/issues"
depends: [
  "ocaml"
  "dune"
  "melange"
]
depexts: [
  ["is-glob"] { npm-version = "^4.0.3" }
]
dev-repo: "git+https://github.com/your/project.git"
